--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row mt-5">
         <div class="col">
           <h1>Bionic Reading</h1>
         </div>
