Added alternate default text

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
           <p>I saw <a href="https://twitter.com/jonedmiston/status/1657218897286955008" target="_blank">a tweet</a> that suggested that bolding the first part of every word in a block of text increased the speed at which you could read.</p>
           <p>The hypothesis seemed worth trying out...</p>
           <p>Paste a block of text below and click the button, and see if you can read the result more quickly than normal.</p>
+          <p>Or <a href="#!" onClick="$('#plainTextInput').val('Attention neurodivergent community - this bionic reading method is absolutely mind blowing. Your eyes scan the first bold letters and your brain center automatically completes the words. It lets you read twice as fast, is less overwhelming, and helps you to stay focused. You will feel much more productive and have a greater sense of achievement which will boost your confidence and make you overall feel more positive.');">use (almost) the original text</a>.</p>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <textarea id="plainTextInput" class="form-control" rows="8">Attention neurodivergent community - this bionic reading method is absolutely mind blowing. Your eyes scan the first bold letters and your brain center automatically completes the words. It lets you read twice as fast, is less overwhelming, and helps you to stay focused. You will feel much more productive and have a greater sense of achievement which will boost your confidence and make you overall feel more positive.</textarea>
+          <textarea id="plainTextInput" class="form-control" rows="8">At three o’clock precisely I was at Baker Street, but Holmes had not yet returned. The landlady informed me that he had left the house shortly after eight o’clock in the morning. I sat down beside the fire, however, with the intention of awaiting him, however long he might be. I was already deeply interested in his inquiry, for, though it was surrounded by none of the grim and strange features which were associated with the two crimes which I have already recorded, still, the nature of the case and the exalted station of his client gave it a character of its own. Indeed, apart from the nature of the investigation which my friend had on hand, there was something in his masterly grasp of a situation, and his keen, incisive reasoning, which made it a pleasure to me to study his system of work, and to follow the quick, subtle methods by which he disentangled the most inextricable mysteries. So accustomed was I to his invariable success that the very possibility of his failing had ceased to enter into my head.</textarea>
           <button onClick="updateBionicText()">Update</button>
         </div>
       </div>
