--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
       function updateBionicText() {
         // alert($('#plainTextInput').val())
         // alert($('#plainTextInput').val().split(' ')[0].length)
-        let outputHtml = '';
-        let inputArray = $('#plainTextInput').val().split(' ');
+        let outputHtml = '<p>';
+        let inputArray = $('#plainTextInput').val().replace('\n','  ').split(' ');
         for (let i=0; i < inputArray.length; i++) {
           // outputHtml += inputArray[i].length + ' ';
           let len = inputArray[i].length;
           if (len == 1) {
             outputHtml += '<b>' + inputArray[i] + '</b><b></b> ';
+          }
+          else if (len == 0) {
+            outputHtml += '</p><p>'
           }
           else if (len == 3) {
             outputHtml += '<b>' + inputArray[i].substring(0,1) + '</b><b>' + inputArray[i].substring(1,3) + '</b> ';
@@ -66,7 +69,7 @@
             outputHtml += '<b>' + inputArray[i].substring(0,p1Len) + '</b><b>' + inputArray[i].substring(p1Len,len) + '</b> ';
           }
         }
-        $('#bionicTextOutput').html(outputHtml)
+        $('#bionicTextOutput').html(outputHtml + '</p>')
       }
       $( document ).ready(updateBionicText);
     </script>
